09-namespace-app2.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: app2
  labels:
    istio-injection: enabled
