12-namespace-app3.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: app3
  labels:
    istio-injection: enabled
