11-deployment-app2.yaml
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: app2-deployment
  namespace: app2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 2 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: quinont/app1hola:latest
        ports:
        - containerPort: 80
