14-deployment-app3.yaml
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: app3-deployment
  namespace: app3
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 2 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: quinont/app3hola:latest
        ports:
        - containerPort: 80
