05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: test-nginx
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: nginx
  selector:
    app: nginx
