10-service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: app2
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: app2
  selector:
    app: app2
