13-service-app3.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: app3
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: app3
  selector:
    app: app3
