15-my-gateway-app3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app3-gateway
  namespace: app3
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "istio-poc-app3.xp.latam.com"
