00-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authrule
  namespace: istio-system
spec:
  host: istio-ingressgateway.istio-system.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
