01-istio-virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: health
  namespace: test-nginx
spec:
  gateways:
  - httpbin-gateway
  hosts:
  - "*"
  http:
  - match:
    - headers:
        user-agent:
          prefix: GoogleHC
      method:
        exact: GET
      uri:
        exact: /
    rewrite:
      authority: istio-ingressgateway.istio-system.svc.cluster.local:15020
      uri: /healthz/ready
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 15020
  - match:
    - uri:
        exact: "/app1/hola"
    route:
    - destination:
        host: app2.app2.svc.cluster.local
        port:
          number: 80
  - route:
    - destination:
        host: nginx-svc
