02-my-ingress-bkp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: istio-poc2.xp.latam.com.
    # Enable use of manually pre-defined global static IP
    # kubernetes.io/ingress.global-static-ip-name: 34.98.68.126
    # Enable use of a GCP-managed certificate through a ManagedCertificate resource
    networking.gke.io/managed-certificates: ingress-certificate
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
