16-my-ingress-app3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress-app3
  namespace: istio-system
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: istio-poc-rr.example.com.
    # Enable use of manually pre-defined global static IP
    # kubernetes.io/ingress.global-static-ip-name: 34.98.68.126
    # Enable use of a GCP-managed certificate through a ManagedCertificate resource
    networking.gke.io/managed-certificates: ingress-certificate-app3
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: istio-poc-app3.xp.latam.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
