17-istio-virtualsvc-app3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vservice-app3
  namespace: app3
spec:
  gateways:
  - app3-gateway
  hosts:
  - "istio-poc-app3.xp.latam.com"
  http:
  - match:
    - headers:
        user-agent:
          prefix: GoogleHC
      method:
        exact: GET
      uri:
        exact: /
    rewrite:
      authority: istio-ingressgateway.istio-system.svc.cluster.local:15020
      uri: /healthz/ready
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 15020
  - match:
    - uri:
        exact: "/app3/hola"
    route:
    - destination:
        host: app3.app3.svc.cluster.local
        port:
          number: 80
